Initial cleanup pass, bumping things up to Java 26.